[project]
name = "cs265-activation-checkpointing"
version = "0.1.0"
description = ""
authors = [
    {name = "enriquedlh97",email = "enriquedlh97@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.1.2"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
isort = "^6.0.1"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
